--- a/DevKit/Views/TcpServerView.xaml
+++ b/DevKit/Views/TcpServerView.xaml
@@ -420,17 +420,7 @@
                     <CheckBox
                         Grid.Row="0"
                         Content="HEX"
-                        IsChecked="{Binding SendHex}">
-                        <b:Interaction.Triggers>
-                            <b:EventTrigger EventName="Checked">
-                                <b:InvokeCommandAction Command="{Binding SendHexCheckedCommand}" />
-                            </b:EventTrigger>
-
-                            <b:EventTrigger EventName="Unchecked">
-                                <b:InvokeCommandAction Command="{Binding SendHexUncheckedCommand}" />
-                            </b:EventTrigger>
-                        </b:Interaction.Triggers>
-                    </CheckBox>
+                        IsChecked="{Binding SendHex}" />
 
                     <Button
                         Grid.Row="1"
