--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -84,7 +84,7 @@
         </Grid>
 
         <ListBox
-            x:Name="ClientMessageListBox"
+            x:Name="MessageListBox"
             Grid.Row="1"
             Margin="0,10"
             ItemsSource="{Binding MessageCollection}"
