--- a/DevKit/Views/UdpServerView.xaml
+++ b/DevKit/Views/UdpServerView.xaml
@@ -121,20 +121,12 @@
                     <DataTemplate>
                         <Grid Height="45">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
 
-                            <Ellipse
-                                Grid.Column="0"
-                                Width="15"
-                                Height="15"
-                                Margin="0,0,10,0"
-                                Fill="{Binding ConnectColorBrush}" />
-
                             <TextBlock
-                                Grid.Column="1"
+                                Grid.Column="0"
                                 VerticalAlignment="Center"
                                 FontSize="14">
                                 <TextBlock.Text>
@@ -146,7 +138,7 @@
                             </TextBlock>
 
                             <Border
-                                Grid.Column="2"
+                                Grid.Column="1"
                                 Width="24"
                                 Height="18"
                                 Background="Red"
@@ -181,6 +173,263 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <Border Grid.Column="0" Style="{StaticResource BorderTipSuccess}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock Grid.Column="0" Text="已连接" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="10,0"
+                            FontWeight="Bold"
+                            Foreground="{DynamicResource SuccessBrush}"
+                            Text="{Binding ConnectedClientAddress}"
+                            TextWrapping="NoWrap" />
+                    </Grid>
+                </Border>
+
+                <CheckBox
+                    Grid.Column="1"
+                    Margin="10,0,0,0"
+                    Content="HEX显示"
+                    IsChecked="{Binding ShowHex}">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="Checked">
+                            <b:InvokeCommandAction Command="{Binding ShowHexCheckedCommand}" />
+                        </b:EventTrigger>
+
+                        <b:EventTrigger EventName="Unchecked">
+                            <b:InvokeCommandAction Command="{Binding ShowHexUncheckedCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </CheckBox>
+            </Grid>
+
+            <ListBox
+                x:Name="MessageListBox"
+                Grid.Row="1"
+                Margin="0,10"
+                ItemsSource="{Binding MessageCollection}"
+                ScrollViewer.CanContentScroll="False"
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+
+                            <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                <Border Background="{Binding IsSend, Converter={StaticResource MessageTagBgConverterKey}}" CornerRadius="3">
+                                    <TextBlock
+                                        Margin="3,1"
+                                        FontSize="10"
+                                        FontWeight="Light"
+                                        Foreground="White"
+                                        Text="{Binding IsSend, Converter={StaticResource MessageTypeConverterKey}}" />
+                                </Border>
+
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    VerticalAlignment="Center"
+                                    FontSize="12"
+                                    Foreground="{DynamicResource SecondaryTextBrush}"
+                                    Text="{Binding Time, StringFormat=[{0}]}" />
+                            </StackPanel>
+
+                            <TextBlock
+                                Grid.Row="1"
+                                Margin="0,2,0,0"
+                                FontSize="12"
+                                Text="{Binding Content}"
+                                TextWrapping="Wrap">
+                                <TextBlock.ContextMenu>
+                                    <ContextMenu Style="{x:Null}">
+                                        <MenuItem
+                                            Click="MenuItem_Click"
+                                            Header="复制"
+                                            Style="{x:Null}" />
+                                    </ContextMenu>
+                                </TextBlock.ContextMenu>
+                            </TextBlock>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <Border x:Name="ItemContainerBorder" Padding="3">
+                                        <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                                    </Border>
+
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+
+                <!--  自动滑动到最底部  -->
+                <b:Interaction.Behaviors>
+                    <ut:AutoScrollToBottomBehavior />
+                </b:Interaction.Behaviors>
+            </ListBox>
+
+            <Grid Grid.Row="2" Margin="0,0,0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <ComboBox
+                    x:Name="ExCommandComboBox"
+                    Grid.Column="0"
+                    HorizontalContentAlignment="Stretch"
+                    ItemsSource="{Binding ExCommandCollection}"
+                    SelectedIndex="0">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <TextBlock
+                                    Grid.Column="0"
+                                    VerticalAlignment="Center"
+                                    Text="{Binding Annotation}" />
+
+                                <Button
+                                    Grid.Column="1"
+                                    Background="Transparent"
+                                    BorderThickness="0"
+                                    Command="{Binding DataContext.DeleteExCmdCommand, ElementName=ExCommandComboBox}"
+                                    CommandParameter="{Binding Id}"
+                                    Content="&#xe6dc;"
+                                    FontFamily="/DevKit;component/Fonts/#iconfont"
+                                    FontSize="16"
+                                    Foreground="{DynamicResource DangerBrush}"
+                                    Visibility="{Binding Annotation, Converter={StaticResource DeleteExCmdBtnVisibleConverterKey}}" />
+                            </Grid>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="DropDownOpened">
+                            <b:InvokeCommandAction Command="{Binding DropDownOpenedCommand}" />
+                        </b:EventTrigger>
+
+                        <b:EventTrigger EventName="DropDownClosed">
+                            <b:InvokeCommandAction Command="{Binding DropDownClosedCommand}" CommandParameter="{Binding ElementName=ExCommandComboBox}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </ComboBox>
+
+                <Button
+                    Grid.Column="1"
+                    Margin="10,0"
+                    Command="{Binding AddExtensionCommand}"
+                    Content="&#xe6aa;"
+                    FontFamily="/DevKit;component/Fonts/#iconfont"
+                    Foreground="{DynamicResource PrimaryBrush}"
+                    ToolTip="添加扩展指令" />
+
+                <CheckBox
+                    x:Name="LoopCheckBox"
+                    Grid.Column="2"
+                    Content="循环发送"
+                    IsChecked="{Binding LoopSend}">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="Unchecked">
+                            <b:InvokeCommandAction Command="{Binding LoopUncheckedCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </CheckBox>
+
+                <hc:TextBox
+                    Grid.Column="3"
+                    Margin="10,0"
+                    IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}">
+                    <TextBox.Text>
+                        <Binding Path="CommandInterval" UpdateSourceTrigger="PropertyChanged">
+                            <Binding.ValidationRules>
+                                <ut:NumberValidationRule />
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </hc:TextBox>
+
+                <TextBlock
+                    Grid.Column="4"
+                    VerticalAlignment="Center"
+                    Text="ms/次" />
+            </Grid>
+
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <hc:TextBox
+                    Grid.Column="0"
+                    Padding="4"
+                    VerticalContentAlignment="Top"
+                    Text="{Binding UserInputText}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto" />
+
+                <Grid Grid.Column="1" Margin="10,0,0,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
+                    <CheckBox
+                        Grid.Row="0"
+                        Content="HEX"
+                        IsChecked="{Binding SendHex}" />
+
+                    <Button
+                        Grid.Row="1"
+                        Margin="0,7"
+                        HorizontalAlignment="Stretch"
+                        Command="{Binding ClearMessageCommand}"
+                        Content="清屏" />
+
+                    <Button
+                        Grid.Row="2"
+                        Background="{DynamicResource BackgroundBrush}"
+                        BorderThickness="0"
+                        Command="{Binding SendMessageCommand}"
+                        Content="发送"
+                        Foreground="{DynamicResource SuccessBrush}" />
+                </Grid>
+            </Grid>
         </Grid>
 
         <Grid
