--- a/DevKit/Views/WebSocketClientView.xaml
+++ b/DevKit/Views/WebSocketClientView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="DevKit.Views.WebSocketCommunicateView"
+    x:Class="DevKit.Views.WebSocketClientView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
@@ -9,7 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ut="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    d:DataContext="{d:DesignInstance Type=vm:WebSocketCommunicateViewModel}"
+    d:DataContext="{d:DesignInstance Type=vm:WebSocketClientViewModel}"
     d:DesignHeight="560"
     d:DesignWidth="600"
     Background="white"
