--- a/DevKit/Views/WebSocketServerView.xaml
+++ b/DevKit/Views/WebSocketServerView.xaml
@@ -1,9 +1,238 @@
-﻿<UserControl x:Class="DevKit.Views.WebSocketServerView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid />
+﻿<UserControl
+    x:Class="DevKit.Views.WebSocketServerView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:cvt="clr-namespace:DevKit.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ut="clr-namespace:DevKit.Utils"
+    xmlns:vm="clr-namespace:DevKit.ViewModels"
+    d:DataContext="{d:DesignInstance Type=vm:WebSocketServerViewModel}"
+    d:DesignHeight="560"
+    d:DesignWidth="600"
+    Background="white"
+    mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="14" />
+        </Style>
+
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="14" />
+        </Style>
+
+        <cvt:MessageTagBgConverter x:Key="MessageTagBgConverterKey" />
+        <cvt:MessageTypeConverter x:Key="MessageTypeConverterKey" />
+        <cvt:ListenStateConverter x:Key="ListenStateConverterKey" />
+        <cvt:MessageTagConverter x:Key="MessageTagConverterKey" />
+        <cvt:MessageCountConverter x:Key="MessageCountConverterKey" />
+        <cvt:DeleteExCmdBtnVisibleConverter x:Key="DeleteExCmdBtnVisibleConverterKey" />
+    </UserControl.Resources>
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="1.5*" />
+        </Grid.ColumnDefinitions>
+
+        <!--  WebSocket 已连接的客户端列表  -->
+        <Grid Grid.Column="0" Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Text="本机地址" />
+
+                <hc:ComboBox
+                    Grid.Column="1"
+                    Margin="10,0,0,0"
+                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
+                    ItemsSource="{Binding LocalAddressCollection}"
+                    SelectedIndex="{Binding ComboBoxSelectedIndex}" />
+            </Grid>
+
+            <Grid Grid.Row="1" Margin="0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Text="监听端口" />
+
+                <hc:TextBox
+                    Grid.Column="1"
+                    MinWidth="50"
+                    Margin="10,0"
+                    hc:InfoElement.Placeholder="端口"
+                    hc:InfoElement.ShowClearButton="True"
+                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
+                    Text="{Binding ListenPort}"
+                    TextWrapping="NoWrap" />
+
+                <Ellipse
+                    Grid.Column="2"
+                    Width="18"
+                    Height="18"
+                    Margin="0,0,10,0"
+                    Fill="{Binding ListenStateColor}" />
+
+                <Button
+                    x:Name="ListenStateButton"
+                    Grid.Column="3"
+                    Command="{Binding ServerListenCommand}"
+                    Content="{Binding ListenState}"
+                    Style="{StaticResource ButtonPrimary}" />
+            </Grid>
+
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Text="自定义路径" />
+
+                <hc:TextBox
+                    Grid.Column="1"
+                    Margin="10,0,0,0"
+                    hc:InfoElement.Placeholder="非必填"
+                    hc:InfoElement.ShowClearButton="True"
+                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
+                    Text="{Binding RequestPath}"
+                    TextWrapping="NoWrap" />
+            </Grid>
+
+            <Grid Grid.Row="3" Margin="0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Text="地址" />
+
+                <hc:TextBox
+                    Grid.Column="1"
+                    Margin="10,0,0,0"
+                    hc:InfoElement.Placeholder="开启监听后自动生成"
+                    IsReadOnly="True"
+                    Text="{Binding WebSocketUrl}"
+                    TextWrapping="NoWrap" />
+            </Grid>
+
+            <ListBox
+                x:Name="ClientListBox"
+                Grid.Row="4"
+                HorizontalContentAlignment="Stretch"
+                ItemsSource="{Binding ClientCollection}"
+                ScrollViewer.CanContentScroll="False"
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="SelectionChanged">
+                        <b:InvokeCommandAction Command="{Binding ClientItemSelectionChangedCommand}" CommandParameter="{Binding SelectedItem, ElementName=ClientListBox}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Height="45">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <Ellipse
+                                Grid.Column="0"
+                                Width="15"
+                                Height="15"
+                                Margin="0,0,10,0"
+                                Fill="{Binding ConnectColorBrush}" />
+
+                            <TextBlock
+                                Grid.Column="1"
+                                VerticalAlignment="Center"
+                                FontSize="14">
+                                <TextBlock.Text>
+                                    <MultiBinding StringFormat="{}{0}:{1}">
+                                        <Binding Path="Ip" />
+                                        <Binding Path="Port" />
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+
+                            <Border
+                                Grid.Column="2"
+                                Width="24"
+                                Height="18"
+                                Background="Red"
+                                CornerRadius="9"
+                                Visibility="{Binding MessageCount, Converter={StaticResource MessageTagConverterKey}}">
+                                <TextBlock
+                                    VerticalAlignment="Center"
+                                    FontSize="10"
+                                    Foreground="White"
+                                    Text="{Binding MessageCount, Converter={StaticResource MessageCountConverterKey}}"
+                                    TextAlignment="Center" />
+                            </Border>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+
+                <!--  自动滑动到最底部  -->
+                <b:Interaction.Behaviors>
+                    <ut:AutoScrollToBottomBehavior />
+                </b:Interaction.Behaviors>
+            </ListBox>
+        </Grid>
+
+        <!--  WebSocket 客户端 通信界面  -->
+        <Grid
+            Grid.Column="1"
+            Margin="0,10,10,10"
+            Visibility="{Binding IsContentViewVisible}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+        </Grid>
+
+        <Grid
+            Grid.Column="1"
+            Margin="0,10,10,10"
+            Visibility="{Binding IsEmptyImageVisible}">
+            <Grid.Background>
+                <ImageBrush ImageSource="/DevKit;component/Images/empty.png" Stretch="Uniform" />
+            </Grid.Background>
+        </Grid>
+    </Grid>
 </UserControl>
