--- a/DevKit/Views/QrCodeView.xaml
+++ b/DevKit/Views/QrCodeView.xaml
@@ -7,7 +7,7 @@
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    d:DataContext="{d:DesignInstance Type=vm:TcpClientViewModel}"
+    d:DataContext="{d:DesignInstance Type=vm:QrCodeViewModel}"
     d:DesignHeight="560"
     d:DesignWidth="600"
     Background="white"
