完成带Logo的二维码生成

--- a/DevKit/Views/QrCodeView.xaml
+++ b/DevKit/Views/QrCodeView.xaml
@@ -69,6 +69,7 @@
                         Grid.Column="0"
                         HorizontalAlignment="Stretch"
                         Command="{Binding UploadLogoCommand}"
+                        CommandParameter="{Binding Text, ElementName=UserInputTextBox}"
                         Content="上传Logo"
                         IsEnabled="{Binding IsOptionButtonEnabled}"
                         Style="{StaticResource ButtonInfo}" />
