--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -60,9 +60,10 @@
 
             <hc:TextBox
                 Grid.Column="2"
-                MinWidth="70"
+                MinWidth="90"
                 hc:InfoElement.Placeholder="端口"
                 hc:InfoElement.ShowClearButton="True"
+                MaxLength="4"
                 Text="{Binding RemotePort}"
                 TextWrapping="NoWrap" />
 
@@ -238,16 +239,11 @@
 
             <hc:TextBox
                 Grid.Column="3"
+                MinWidth="100"
                 Margin="10,0"
-                IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}">
-                <TextBox.Text>
-                    <Binding Path="CommandInterval" UpdateSourceTrigger="PropertyChanged">
-                        <Binding.ValidationRules>
-                            <ut:NumberValidationRule />
-                        </Binding.ValidationRules>
-                    </Binding>
-                </TextBox.Text>
-            </hc:TextBox>
+                IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
+                MaxLength="5"
+                Text="{Binding CommandInterval}" />
 
             <TextBlock
                 Grid.Column="4"
